--- a/templates/instagram-block-image.html.twig
+++ b/templates/instagram-block-image.html.twig
@@ -14,7 +14,8 @@
  */
 #}
 {% spaceless %}
-    <a class="group" target="blank_" rel="group1" href="{{ href }}">
-        <img style="float: left; display: inline-block; margin: 0 5px 5px 0px; width: {{ width }}px; height: {{ height }}px;" src="{{ src }}">
+    <a class="group" target="_blank" rel="group1" href="{{ href }}">
+        <img height="{{ height }}px" width="{{ width }}px" src="{{ src }}">
     </a>
 {% endspaceless %}
+
