--- a/templates/instagram-block-image.html.twig
+++ b/templates/instagram-block-image.html.twig
@@ -14,7 +14,7 @@
  */
 #}
 {% spaceless %}
-    <a class="group" target="_blank" rel="group1" href="{{ href }}">
+    <a class="group" target="_blank" data-instagram-rel="1" href="{{ href }}">
         <img height="{{ height }}px" width="{{ width }}px" src="{{ src }}">
     </a>
 {% endspaceless %}
