--- a/templates/instagram-block-image.html.twig
+++ b/templates/instagram-block-image.html.twig
@@ -15,7 +15,6 @@
 #}
 {% spaceless %}
     <a class="group" target="_blank" data-instagram-rel="1" href="{{ href }}">
-        <img height="{{ height }}px" width="{{ width }}px" src="{{ src }}">
+        <img alt="{{ data.caption.text }}" height="{{ height }}px" width="{{ width }}px" src="{{ src }}">
     </a>
 {% endspaceless %}
-
